--- a/hugo/content/post/2013-07-12-grep-test.md
+++ b/hugo/content/post/2013-07-12-grep-test.md
@@ -44,88 +44,88 @@ Here are a few examples of code that would fail the Grep Test because of dynamic
 
 ### JavaScript: dynamic function declarations
 
-    lang:javascript
+```javascript
+var Ray = function(position, direction) {
+    this.position = position;
+    this.direction = direction;
+};
 
-    var Ray = function(position, direction) {
-      this.position = position;
-      this.direction = direction;
+["position", "direction"].forEach(function(property) {
+    var getterName = "get" + property.charAt(0).toUpperCase() + property.substr(1);
+    Ray.prototype[getterName] = function() {
+    return this[property];
     };
+});
 
-    ["position", "direction"].forEach(function(property) {
-      var getterName = "get" + property.charAt(0).toUpperCase() + property.substr(1);
-      Ray.prototype[getterName] = function() {
-        return this[property];
-      };
-    });
-
-    var ray = new Ray([0, 0], [1, 1]);
-    console.log(ray.getPosition());
-    console.log(ray.getDirection());
+var ray = new Ray([0, 0], [1, 1]);
+console.log(ray.getPosition());
+console.log(ray.getDirection());
+```
 
 Fails because grepping for `getPosition` won't find me the function definition.
 
 ### Ruby: `method_missing`
 
-    lang:ruby
+```ruby
+class Ray
+  attr_accessor :position, :direction
 
-    class Ray
-      attr_accessor :position, :direction
+  def initialize(position, direction)
+    @position = position
+    @direction = direction
+  end
 
-      def initialize(position, direction)
-        @position = position
-        @direction = direction
+  def method_missing(m, *args, &block)
+    if m.to_s =~ /^negative_(\w+)$/
+      case $1
+        when "position"
+          [  -@position[0],  -@position[1] ]
+        when "direction"
+          [ -@direction[0], -@direction[1] ]
       end
-
-      def method_missing(m, *args, &block)
-        if m.to_s =~ /^negative_(\w+)$/
-          case $1
-            when "position"
-              [  -@position[0],  -@position[1] ]
-            when "direction"
-              [ -@direction[0], -@direction[1] ]
-          end
-        else
-          super
-        end
-      end
+    else
+      super
     end
+  end
+end
 
-    ray = Ray.new([1, 2], [3, 4])
-    puts ray.position.inspect
-    puts ray.direction.inspect
-    puts ray.negative_position.inspect
-    puts ray.negative_direction.inspect
+ray = Ray.new([1, 2], [3, 4])
+puts ray.position.inspect
+puts ray.direction.inspect
+puts ray.negative_position.inspect
+puts ray.negative_direction.inspect
+```
 
 Fails the test because grepping for `negative_position` won't find me the 
 function definition.
 
 ### Python: `__getattr__`
 
-    lang:python
+```python
+import re
 
-    import re
+class Ray(object):
+    def __init__(self, position, direction):
+        self.position = position
+        self.direction = direction
 
-    class Ray(object):
-        def __init__(self, position, direction):
-            self.position = position
-            self.direction = direction
+    def __getattr__(self, name):
+        pat = re.compile('^(\w+)_is_zero$')
+        if pat.match(name):
+            prop = pat.findall(name)[0]
+            if prop == 'position':
+                return self.position[0] == 0 and self.position[1] == 0
+            elif prop == 'direction':
+                return self.direction[0] == 0 and self.direction[1] == 0
 
-        def __getattr__(self, name):
-            pat = re.compile('^(\w+)_is_zero$')
-            if pat.match(name):
-                prop = pat.findall(name)[0]
-                if prop == 'position':
-                    return self.position[0] == 0 and self.position[1] == 0
-                elif prop == 'direction':
-                    return self.direction[0] == 0 and self.direction[1] == 0
+        raise AttributeError
 
-            raise AttributeError
-
-    ray = Ray([0, 0], [1, 1])
-    print ray.position
-    print ray.direction
-    print ray.position_is_zero
-    print ray.direction_is_zero
+ray = Ray([0, 0], [1, 1])
+print ray.position
+print ray.direction
+print ray.position_is_zero
+print ray.direction_is_zero
+```
 
 Fails the test because grepping for `position_is_zero` won't find me the 
 function definition.
@@ -136,49 +136,49 @@ Here's an example that would fail the Grep Test due to dynamic invocation:
 
 Let's say we have a form:
 
-    lang:html
-
-    <form class="login">
-        Username: <input name="username" />
-        Password: <input name="password" />
-        <input type="submit" />
-    </form>
+```html
+<form class="login">
+    Username: <input name="username" />
+    Password: <input name="password" />
+    <input type="submit" />
+</form>
+```
 
 And we want to update a model based on the values of these fields when the form 
 is submitted:
 
-    lang:javascript
+```javascript
+var User = function() {};
 
-    var User = function() {};
+User.prototype.getUsername = function() {
+  return this._username;
+};
 
-    User.prototype.getUsername = function() {
-      return this._username;
-    };
+User.prototype.setUsername = function(username) {
+  this._username = username;
+};
 
-    User.prototype.setUsername = function(username) {
-      this._username = username;
-    };
+User.prototype.getPassword = function() {
+  return this._password;
+}
 
-    User.prototype.getPassword = function() {
-      return this._password;
-    }
+User.prototype.setPassword = function(password) {
+  this._password = password;
+};
 
-    User.prototype.setPassword = function(password) {
-      this._password = password;
-    };
-
-    $("form.login").submit(function(ev) {
-      ev.preventDefault();
-      var fields = $(this).serializeArray();
-      var user = new User();
-      $(fields).each(function(i, field) {
-        var capName = field.name.charAt(0).toUpperCase() + field.name.substr(1);
-        var value = field.value;
-        user["set" + capName](value);
-        console.log(user["get" + capName]());
-      });
-      console.log(user);
-    });
+$("form.login").submit(function(ev) {
+  ev.preventDefault();
+  var fields = $(this).serializeArray();
+  var user = new User();
+  $(fields).each(function(i, field) {
+    var capName = field.name.charAt(0).toUpperCase() + field.name.substr(1);
+    var value = field.value;
+    user["set" + capName](value);
+    console.log(user["get" + capName]());
+  });
+  console.log(user);
+});
+```
 
 Fails the test because grepping for `getUsername` won't find the invocation in 
 the submit callback.
@@ -198,16 +198,16 @@ which this becomes a pain and metaprogramming because a pragmatic option.
 One option is to provide slightly more information while still dynamically 
 generating functions.
 
-    lang:javascript
-
-    [
-      {attr: "position", fn: "getPosition"},
-      {attr: "direction", fn: "getDirection"}
-    ].forEach(function(property) {
-      Ray.prototype[property.fn] = function() {
-        return this[property.attr];
-      };
-    });
+```javascript
+[
+  {attr: "position", fn: "getPosition"},
+  {attr: "direction", fn: "getDirection"}
+].forEach(function(property) {
+  Ray.prototype[property.fn] = function() {
+    return this[property.attr];
+  };
+});
+```
 
 Now both `position` and `getPosition` remain greppable while still avoiding 
 duplicating any common functionality you may have for these functions.
@@ -217,17 +217,17 @@ duplicating any common functionality you may have for these functions.
 Another similar option for retaining dynamic methods while maintaining 
 greppability is to simple add the tokens in the comments.
 
-    lang:javascript
-
-    // Generates the following methods for Ray:
-    //  - getPosition
-    //  - getDirection
-    ["position", "direction"].forEach(function(property) {
-      var getterName = "get" + property.charAt(0).toUpperCase() + property.substr(1);
-      Ray.prototype[getterName] = function() {
-        return this[property];
-      };
-    });
+```javascript
+// Generates the following methods for Ray:
+//  - getPosition
+//  - getDirection
+["position", "direction"].forEach(function(property) {
+  var getterName = "get" + property.charAt(0).toUpperCase() + property.substr(1);
+  Ray.prototype[getterName] = function() {
+    return this[property];
+  };
+});
+```
 
 While I frankly still find this code more difficult to follow than the first 
 compromise or avoiding dynamic declaration altogether, I'd still appreciate 
